samples/_failures_safe/1761464626_7ceb77_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bfe9f11f.c: In function ‘main’:
./samples/SAFE/__tmp_bfe9f11f.c:144:40: error: expected ‘;’ at end of input
  144 |     for (int i = 0; i < operation_count
      |                                        ^
      |                                        ;
./samples/SAFE/__tmp_bfe9f11f.c:144:5: error: expected declaration or statement at end of input
  144 |     for (int i = 0; i < operation_count
      |     ^~~
